--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "browserless": "^9.6.0",
+    "html-get": "^2.9.21",
+    "link-preview-js": "^3.0.3",
+    "metascraper": "^5.29.18",
+    "metascraper-author": "^5.29.15",
+    "metascraper-clearbit": "^5.29.15",
+    "metascraper-date": "^5.29.15",
+    "metascraper-description": "^5.29.15",
+    "metascraper-image": "^5.29.15",
+    "metascraper-logo": "^5.29.15",
+    "metascraper-publisher": "^5.29.15",
+    "metascraper-title": "^5.29.15",
+    "metascraper-url": "^5.29.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
